# hermes-code

./: .gitignore  HERMES_SPEC.md  LICENSE  README.md  __init__.py  check_agents.py  claude_runner.py  cleanup.py  codex_runner.py  command_queue.py  config.py  cost_monitor.py  dashboard.py  dispatch_fixes.py  doc_writer.py  doctor.py  dual_review.py  execution_log.py  executor.py  notification.py  outbox.py  planner.py  prompt_sanitizer.py  pyproject.toml  reconciler.py  review_pr.py  router.py  run_health_check.py  sandbox.py  task_registry.py  tasks.db  web_api.py
docs/: DEVELOPMENT.md  review_pr_usage.md  status_checklist.md
experiments/: hermes-acp-test.py  hermes-e2e-t2t3.py  hermes-eval-experiment.py  hermes-exp1-task-registry.py  hermes-exp10-pr-creation.py  hermes-exp11-send-keys.py  hermes-exp11b-tmux.py  hermes-exp2-runner-integration.py  hermes-exp3-codex-integration.py  hermes-exp3b-codex-integration.py  hermes-exp4-cron-monitor.py  hermes-exp5-e2e.py  hermes-exp6-git-workflow.py  hermes-exp7-code-review.py  hermes-exp8-auto-test.py  hermes-exp9-notification.py  hermes-full-flow-e2e.py  hermes-self-eval.py  hermes-v2-all-source.py  hermes-v2-e2e-tested.py  hermes-v2-final-source.py
integration-tests/: claude-task-runner.py  feishu-progress-relay.py  test_acp_delegate.py  test_acp_e2e.py  test_acp_full.py  test_claude_delegate.py  test_feishu_e2e.py  test_feishu_e2e_v2.py  test_feishu_e2e_v3.py  test_feishu_e2e_v4.py  test_feishu_e2e_v5.py  test_feishu_e2e_v6.py  test_feishu_e2e_v7.py  test_hermes_delegate.py  test_rca_trace.py  test_rca_v2.py  (+2 more)
(+55 files in other folders)
