[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-agent"
version = "2.0.0"
description = "AI Agent orchestration system for Claude Code and Codex"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Li Xiaoming"}]
keywords = ["ai", "agent", "orchestration", "claude-code", "codex"]

[project.scripts]
hermes = "hermes.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
